--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -156,3 +156,7 @@
 		}
 	}
 }
+
+.not-logged-in #header {
+	margin-bottom: 1em;
+}
