--- a/sass/components/_homepage.scss
+++ b/sass/components/_homepage.scss
@@ -122,3 +122,12 @@
 		}
 	}
 }
+
+.not-logged-in {
+	.front .wwm-sanderson,
+	.panopoly-landing-page {
+		.row:not(:first-child) .panel-pane:not(:last-child) {
+			margin-bottom: 1em;
+		}
+	}
+}
